--- a/src/SmartMeetings/components/BuildingDashboard.css
+++ b/src/SmartMeetings/components/BuildingDashboard.css
@@ -1,6 +1,13 @@
 .building-dashboard{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+}
+.dashboard-wrapper{
+    display: flex;
+}
+.buildings-wrapper{
+    display: flex;
+    flex-direction: column;
 }
 
 .building{
@@ -10,12 +17,16 @@
     height: 200px;
     width: 200px;
     display: flex;
+    margin-bottom: 20px;
     margin-right: 20px;
 }
 
 .buildings-count{
     margin-top: 20px;
     display: flex;
-    align-content: center;
-    justify-content: center;
+}
+.create-meeting-form{
+    display: flex;
+    flex-direction: column;
+
 }
